src/styles/elements/_details.css
@layer components {
    .details {
        --details-display: block;
        --details-width: var(--content-width-with-padding);
        --details-max-width: var(--content-max-width);
        --details-margin: var(--spacing-between-elements-normal) auto 0;
        --details-title-margin: 0;
        --details-title-font-size: var(--font-size-ms);
        --details-title-area: title;
        --details-title-color: var(--details-highlight-color);
        --details-title-active-color: var(--details-highlight-color-active);
        --details-z-index: var(--z-index-content);

        --details-subtitle-font-size: var(--font-size-s);
        --details-subtitle-margin: 0;
        --details-subtitle-list-separator: ">";
        --details-subtitle-list-separator-margin: 0 var(--spacing-s);
        --details-subtitle-padding: var(--spacing-s) 0 0;
        --details-subtitle-area: subtitle;

        --details-chevron-display: block;
        --details-chevron-size: 1.5rem;
        --details-chevron-active-transform: rotate(180deg);
        --details-chevron-transition: transform var(--animation-duration-fast) var(--animation-easing-normal);
        --details-chevron-area: chevron;
        --details-chevron-color: var(--details-highlight-color);
        --details-chevron-active-color: var(--details-highlight-color-active);

        display: var(--details-display);
        width: var(--details-width);
        max-width: var(--details-max-width);
        margin: var(--details-margin);
        z-index: var(--details-z-index);
    }

    .details[element-design="default"] {
        --details-highlight-color: var(--color-font-dark);
        --details-highlight-color-active: var(--color-primary);
        --details-subtitle-color: var(--color-primary);
    }

    .details[element-design="primary"] {
        --details-highlight-color: var(--color-primary);
        --details-highlight-color-active: var(--color-primary-dark);
        --details-subtitle-color: var(--color-font);
    }

    .details[element-design="secondary"] {
        --details-highlight-color: var(--color-secondary);
        --details-highlight-color-active: var(--color-secondary-dark);
        --details-subtitle-color: var(--color-font);
    }

    .details[element-design="inverted"] {
        --details-highlight-color: var(--color-font);
        --details-highlight-color-active: var(--color-font-dark);
        --details-subtitle-color: var(--color-font);
    }

    .details:first-child {
        --details-margin: 0 auto;
    }

    .details-accordion .details {
        --details-width: 100%;
        --details-max-width: 100%;
        --details-margin: 0 auto;
    }

    .details__title {
        color: var(--details-title-color);
        margin: var(--details-title-margin);
        font-size: var(--details-title-font-size);
        grid-area: var(--details-title-area);
    }

    .details__subtitle {
        margin: var(--details-subtitle-margin);
        font-size: var(--details-subtitle-font-size);
        color: var(--details-subtitle-color);
        padding: var(--details-subtitle-padding);
        grid-area: var(--details-subtitle-area);
    }

    .details__subtitle:empty {
        display: none;
    }

    .details__subtitle-list {
        list-style: none;
        padding: var(--details-subtitle-padding);
        display: flex;
        flex-flow: row wrap;
    }

    .details__subtitle-list-item:not(:last-child)::after {
        content: var(--details-subtitle-list-separator);
        margin: var(--details-subtitle-list-separator-margin);
    }

    .icon.details__chevron {
        display: var(--details-chevron-display);
        height: var(--details-chevron-size);
        width: var(--details-chevron-size);
        transition: var(--details-chevron-transition);
        background-color: var(--details-chevron-color);
        grid-area: var(--details-chevron-area);
    }

    .details[is-open] > .details__title {
        color: var(--details-title-active-color);
    }

    .details[is-open] > .details__chevron {
        transform: var(--details-chevron-active-transform);
    }

    /* stylelint-disable-next-line max-line-length */
    .details .text-block:first-child > .text-block-column:first-child > .text-block__content:first-child > p:first-child {
        margin-top: 0;
    }

    @media (hover: hover) {
        .details__summary:hover .icon.details__chevron {
            background-color: var(--details-chevron-active-color);
        }
    }
}

